mod adds and config tweaks

--- a/config/Building Gadgets.cfg
+++ b/config/Building Gadgets.cfg
@@ -2,7 +2,7 @@
 
 general {
     # Disable absolute coords-mode for the Copy-Paste gadget
-    B:"Allow absolute Coord-Mode"=true
+    B:"Allow absolute Coord-Mode"=false
 
     # Whether the Building / CopyPaste Gadget can overwrite blocks like water, lava, grass, etc (like a player can).
     # False will only allow it to overwrite air blocks.
