--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -42,27 +42,27 @@ chat {
 
 
 commands {
-    B:back=true
-    B:chunks=true
+    B:back=false
+    B:chunks=false
     B:fly=true
     B:god=true
-    B:heal=true
-    B:home=true
+    B:heal=false
+    B:home=false
     B:inv=true
-    B:kickme=true
-    B:killall=true
+    B:kickme=false
+    B:killall=false
     B:leaderboard=true
-    B:mute=true
+    B:mute=false
     B:nbtedit=true
     B:nick=true
-    B:ranks=true
+    B:ranks=false
     B:rec=true
-    B:rtp=true
-    B:spawn=true
-    B:tpa=true
-    B:tpl=true
+    B:rtp=false
+    B:spawn=false
+    B:tpa=false
+    B:tpl=false
     B:trash_can=true
-    B:warp=true
+    B:warp=false
 }
 
 
@@ -116,10 +116,10 @@ world {
      >
 
     # Enables chunk claiming.
-    B:chunk_claiming=true
+    B:chunk_claiming=false
 
     # Enables chunk loading. If chunk_claiming is set to false, changing this won't do anything.
-    B:chunk_loading=true
+    B:chunk_loading=false
 
     # Disables player damage when they are stuck in walls.
     B:disable_player_suffocation_damage=false
@@ -164,19 +164,19 @@ world {
     I:forced_spawn_dimension_weather=-1
 
     # Max /rtp distance
-    D:rtp_max_distance=100000.0
+    D:rtp_max_distance=0.0
 
     # Max tries /rtp does before failure.
-    I:rtp_max_tries=200
+    I:rtp_max_tries=0
 
     # Min /rtp distance
-    D:rtp_min_distance=1000.0
+    D:rtp_min_distance=0.0
 
     # If set to true, explosions and hostile mobs in spawn area will be disabled, players won't be able to attack each other in spawn area.
     B:safe_spawn=false
 
     # Show play time in corner.
-    B:show_playtime=false
+    B:show_playtime=true
 
     # Enable spawn area in singleplayer.
     B:spawn_area_in_sp=false
