--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -127,7 +127,7 @@ blockingmode {
 
 client {
     # Possible Values: AE, EU, RF, GTEU
-    S:PowerUnit=AE
+    S:PowerUnit=GTEU
 
     # Possible Values: AUTOSEARCH, AUTOSEARCH_KEEP, MANUAL_SEARCH, MANUAL_SEARCH_KEEP, JEI_AUTOSEARCH, JEI_AUTOSEARCH_KEEP, JEI_MANUAL_SEARCH, JEI_MANUAL_SEARCH_KEEP
     S:SEARCH_MODE=AUTOSEARCH
@@ -269,9 +269,9 @@ features {
 
     networkfeatures {
         B:Channels=true
-        B:QuantumLinkingCard=true
-        B:QuantumNetworkBridge=true
-        B:Security=true
+        B:QuantumLinkingCard=false
+        B:QuantumNetworkBridge=false
+        B:Security=false
         B:SpatialIO=true
     }
 
