--- a/config/LogisticsPipes.cfg
+++ b/config/LogisticsPipes.cfg
@@ -56,7 +56,7 @@ general {
     B:ordererPageInvertWheel=false
 
     # Disable the power usage trough LogisticsPipes
-    B:powerUsageDisabled=false
+    B:powerUsageDisabled=true
 
     # A multiplier for the power usage.
     D:powerUsageMultiplyer=1.0
