--- a/config/extrautils2.cfg
+++ b/config/extrautils2.cfg
@@ -21,30 +21,30 @@
 enabled {
     B:AnalogCrafter=true
     B:AngelBlock=true
-    B:AngelRing=true
+    B:AngelRing=false
     B:BagOfHolding=true
-    B:BiomeMarker=true
+    B:BiomeMarker=false
     B:Book=true
-    B:Boomerang=true
-    B:ChickenRing=true
-    B:ChunkLoader=true
+    B:Boomerang=false
+    B:ChickenRing=false
+    B:ChunkLoader=false
     B:CompoundBow=true
-    B:CompressedCobblestone=true
-    B:CompressedDirt=true
-    B:CompressedGravel=true
-    B:CompressedNetherrack=true
-    B:CompressedSand=true
+    B:CompressedCobblestone=false
+    B:CompressedDirt=false
+    B:CompressedGravel=false
+    B:CompressedNetherrack=false
+    B:CompressedSand=false
     B:Contract=true
     B:Crafter=true
     B:CreativeChest=true
     B:CreativeEnergy=true
     B:CreativeHarvest=true
-    B:CursedEarth=true
+    B:CursedEarth=false
     B:DecorativeBedrock=true
     B:DecorativeGlass=true
     B:DecorativeSolid=true
     B:DecorativeSolidWood=true
-    B:"Deep Dark"=true
+    B:"Deep Dark"=false
     B:Drum=true
     B:EnderLilly=true
     B:EnderShard=true
@@ -69,15 +69,15 @@ enabled {
     B:LargishChest=true
     B:LawSword=true
     B:LuxSaber=true
-    B:Machine=true
-    B:MagicApple=true
+    B:Machine=false
+    B:MagicApple=false
     B:Miner=true
     B:MiniChest=true
     B:MoonStone=true
     B:Opinium=true
-    B:PassiveGenerator=true
-    B:PlayerChest=true
-    B:PowerBattery=true
+    B:PassiveGenerator=false
+    B:PlayerChest=false
+    B:PowerBattery=false
     B:PowerManager=true
     B:PowerOverload=true
     B:PowerTransmitter=true
@@ -97,7 +97,7 @@ enabled {
     B:SunCrystal=true
     B:SuperMobSpawner=true
     B:Synergy=false
-    B:Teleporter=true
+    B:Teleporter=false
     B:Terraformer=true
     B:TrashCan=true
     B:TrashCanEnergy=true
@@ -110,22 +110,22 @@ enabled {
     B:WoodenStickPoke=true
     B:Wrench=true
     B:additionalVanillaRecipes=true
-    B:ironwood=true
+    B:ironwood=false
     B:pipe=true
-    B:potion_Purge=true
-    B:potion_doom=true
-    B:potion_fizzy_lifting=true
-    B:potion_gravity=true
-    B:potion_greek_fire=true
-    B:potion_love=true
-    B:potion_relapse=true
-    B:potion_second_chance=true
+    B:potion_Purge=false
+    B:potion_doom=false
+    B:potion_fizzy_lifting=false
+    B:potion_gravity=false
+    B:potion_greek_fire=false
+    B:potion_love=false
+    B:potion_relapse=false
+    B:potion_second_chance=false
     B:sendCapabilitiesAfterDimensionChange=true
-    B:sickle_diamond=true
-    B:sickle_gold=true
-    B:sickle_iron=true
-    B:sickle_stone=true
-    B:sickle_wood=true
+    B:sickle_diamond=false
+    B:sickle_gold=false
+    B:sickle_iron=false
+    B:sickle_stone=false
+    B:sickle_wood=false
     B:spike_creative=true
     B:spike_diamond=true
     B:spike_gold=true
@@ -133,10 +133,10 @@ enabled {
     B:spike_stone=true
     B:spike_wood=true
     B:squidSpawnRestrictions=true
-    B:villager_alchemist=true
-    B:villager_red_mechanic=true
-    B:villager_shady_merchant=true
-    B:wall_world_type=true
+    B:villager_alchemist=false
+    B:villager_red_mechanic=false
+    B:villager_shady_merchant=false
+    B:wall_world_type=false
 }
 
 
