--- a/config/smoothfont/smoothfont.cfg
+++ b/config/smoothfont/smoothfont.cfg
@@ -106,11 +106,11 @@ debug {
 
 font {
     # Use the fonts installed in the operating system.
-    B:useOSFont=false
+    B:useOSFont=true
 
     # Primary font name.
     # (The font installed in the system or existing in the externalFontPaths folders (default:<minecraft dir>/fontfiles).)
-    S:fontName=SansSerif
+    S:fontName=等线 Light
 
     # Secondary font name. It is used if the character cannot be rendered with the primary font.
     # (The font installed in the system or existing in the externalFontPaths folders (default:<minecraft dir>/fontfiles).)
@@ -123,13 +123,13 @@ font {
     I:secondaryFontStyle=0
 
     # Enable anti-alias for OS fonts.(0:off, 1:normal, 2:high precision)
-    I:fontAntiAlias=0
+    I:fontAntiAlias=2
 
     # Enable emphasis for OS fonts. (0:off, 1:Ascii only, 2:Non-Ascii, 3:All)
-    I:fontEmphasis=0
+    I:fontEmphasis=3
 
     # OS font resolution. (0:8px, 1:10px, 2:12px, 3:16px, 4:24px, 5:32px, 6:48px, 7:64px)
-    I:fontResolution=3
+    I:fontResolution=7
 
     # Enable automatic font size detection for the font resolution.
     B:fontAutoSizing=true
