tweak lockdown config for dev use

--- a/config/lockdown.cfg
+++ b/config/lockdown.cfg
@@ -7,10 +7,10 @@
 
 
 "world creation" {
-    B:"Disable Game Mode Button"=true
-    B:"Disable More World Options Button"=true
-    B:"Disable Regular World Creation"=true
-    B:"Enable Overriding Template World Settings"=false
+    B:"Disable Game Mode Button"=false
+    B:"Disable More World Options Button"=false
+    B:"Disable Regular World Creation"=false
+    B:"Enable Overriding Template World Settings"=true
     S:"World Template Directory"=template
 }
 
